# Local_RAG_Chatbot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  test_chat.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_07_03_1351-43290495852e_envoi_d_un_message_à_un_utilisateur_msg_.py  2026_07_05_0000_add_persona_to_users.py  2026_07_05_0001_add_user_memory_to_chat_sessions.py
backend/app/: __init__.py  main.py
backend/app/api/: middleware.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  conversations.py  documents.py  health.py  settings.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  security.py
backend/app/repositories/: __init__.py  conversation_repository.py  document_repository.py
backend/app/schemas/: __init__.py  chat.py  common.py  conversation.py  document.py  health.py  settings.py
backend/app/services/: __init__.py  api_service.py  chat_service.py  document_processor.py
backend/app/utils/: logging.py  timing.py
backend/tests/: conftest.py  test_api_service.py  test_health.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConversationSidebar.tsx  FileUploadButton.tsx  SettingsModal.tsx
