[tool.poetry]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "Production-grade local RAG chatbot backend"
authors = ["Amine"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"

# Web framework
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0"}
python-multipart = ">=0.0.18"

# Database
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.0"}
asyncpg = ">=0.30.0"
alembic = ">=1.14.0"

# Configuration & validation
pydantic = ">=2.10.0"
pydantic-settings = ">=2.7.0"

# HTTP client (for Ollama, Qdrant health checks)
httpx = ">=0.28.0"

# Vector database
qdrant-client = ">=1.12.0"

# Logging
structlog = ">=24.4.0"

# AI & Agents
langchain = ">=0.3.0"
langchain-ollama = ">=0.2.0"
langgraph = ">=0.2.0"
duckduckgo-search = ">=6.3.0"
pypdf = ">=5.0.0"

# Document processing
python-docx = ">=0.8.11"
python-pptx = ">=0.6.23"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=6.0.0"
httpx = ">=0.28.0"

# Linting & formatting
ruff = ">=0.8.0"

# Type checking
mypy = ">=1.13.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
